# Projekt-3

./: CMakeLists.txt  main.cpp
raport/: Techniki Programowania - projekt 3 - 198344 197818.ipynb
